--- a/src/app/bs-navbar/bs-navbar.component.html
+++ b/src/app/bs-navbar/bs-navbar.component.html
@@ -7,19 +7,19 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav ml-auto mb-2 mb-md-0">
                 <li class="nav-item">
-                    <a class="nav-link text-white" routerLink="/storage">Raktár</a>
+                    <a *ngIf="userUid" class="nav-link text-white" routerLink="/storage">Raktár</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white" routerLink="/storage-missing-items">Ajánlott termékek</a>
+                    <a *ngIf="userUid" class="nav-link text-white" routerLink="/storage-missing-items">Ajánlott termékek</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white" routerLink="/shopping-list">Bevásárlólista</a>
+                    <a *ngIf="userUid" class="nav-link text-white" routerLink="/shopping-list">Bevásárlólista</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white" routerLink="/bucket-list">Bakancslista</a>
+                    <a *ngIf="userUid" class="nav-link text-white" routerLink="/bucket-list">Bakancslista</a>
                 </li> 
                 <li class="nav-item">
-                    <a class="nav-link text-white" routerLink="/budget">Kiadásfigyelő</a>
+                    <a *ngIf="userUid" class="nav-link text-white" routerLink="/budget">Kiadásfigyelő</a>
                 </li>    
             </ul>
             <ul class="navbar-nav ms-auto mb-2 mb-md-0">
@@ -31,8 +31,8 @@
             <li ngbDropdown *ngIf="authService.user$ | async as user; else anonymousUser" class="nav-item dropdown">
                 <a ngbDropdownToggle *ngIf="loggedInUser && loggedInUser.length > 0" class="nav-link dropdown-toggle" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     {{ loggedInUser[0].name.firstname + ' ' +  loggedInUser[0].name.lastname}}
-                  </a>                  
-                <div ngbDropdownMenu class="dropdown-menu" aria-labelledby="dropdown01">
+                </a>                  
+                <div ngbDropdownMenu class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdown01">
                     <a class="dropdown-item" (click)="logout()">Kijelentkezés</a>
                 </div>
             </li>
