--- a/src/app/pages/budget-add/budget-add.component.html
+++ b/src/app/pages/budget-add/budget-add.component.html
@@ -25,6 +25,12 @@
                     Kategória megadása kötelező!
                 </div>
             </mat-form-field>
+            <mat-form-field>
+                <mat-label for="date">Date</mat-label>
+                <input matInput [matDatepicker]="picker" formControlName="date" required>
+                <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                <mat-datepicker #picker></mat-datepicker>
+            </mat-form-field>
             <mat-card-actions>
                 <button mat-raised-button type="button" (click)="onSubmit()" [disabled]="!createCostsForm.valid" [routerLink]="'/budget'">Kiadás hozzáadása</button>
             </mat-card-actions>
