--- a/src/app/pages/budget/budget.component.html
+++ b/src/app/pages/budget/budget.component.html
@@ -1,4 +1,5 @@
-<div class="table-container">
+<div class="table-and-form-container">
+  <div class="table-container">
     <table matSort (matSortChange)="sortData($event)">
       <tr class="header-row">
         <th mat-sort-header="category">Kategória</th>
@@ -11,9 +12,19 @@
         <td><mat-icon (click)="delete(cost)" matTooltip="Kiadás törlése">delete</mat-icon></td>
       </tr>
     </table>
+  </div>
+  <div class="form-container">
+    <mat-form-field>
+      <input matInput [matDatepicker]="picker" [formControl]="filterDate">
+      <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+      <mat-datepicker #picker></mat-datepicker>
+    </mat-form-field>
+    <button mat-raised-button (click)="filterByDate()">Szűrés</button>
+    <button mat-raised-button (click)="resetFilter()">Visszaállít</button>
+  </div>
 </div>
 
-<div class="chart-container">
-  <canvasjs-chart [options]="chartOptions" [styles]="{width: '100%', height:'360px'}"></canvasjs-chart>
-  <canvasjs-chart [options]="columnChartOptions" [styles]="{width: '100%', height:'360px'}"></canvasjs-chart>     
+<div class="chart-container" *ngIf="!loading">
+<canvasjs-chart [options]="chartOptions" [styles]="{width: '100%', height:'360px'}"></canvasjs-chart>
+<canvasjs-chart [options]="columnChartOptions" [styles]="{width: '100%', height:'360px'}"></canvasjs-chart>
 </div>
