--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -5,10 +5,10 @@
 <div class="centered-container">
     <mat-form-field>
         <mat-icon matPrefix>email</mat-icon>
-        <mat-label for="email">Email cím: </mat-label><input matInput type="text" [formControl]="email" required (input)="checkNameFields()"/>
+        <mat-label for="email">E-mail-cím: </mat-label><input matInput type="text" [formControl]="email" required (input)="checkNameFields()"/>
     </mat-form-field>
-    <span *ngIf="email.value.length === 0 && email?.touched" class="text-danger"> Email cím megadása kötelező!</span>
-    <span class="error text-danger"  *ngIf="email?.invalid && email?.touched && email.value.length > 0">Az email cím érvénytelen!</span>
+    <span *ngIf="email.value.length === 0 && email?.touched" class="text-danger"> E-mail-cím megadása kötelező!</span>
+    <span class="error text-danger"  *ngIf="email?.invalid && email?.touched && email.value.length > 0">Az e-mail-cím érvénytelen!</span>
     <mat-form-field>
         <mat-icon matPrefix>vpn_key</mat-icon>
         <mat-label for="password">Jelszó: </mat-label>
