--- a/src/app/pages/signup/signup.component.html
+++ b/src/app/pages/signup/signup.component.html
@@ -4,10 +4,10 @@
             <h1>Fiók regisztrálása!</h1>
             <mat-form-field>
                 <mat-icon matPrefix>email</mat-icon>
-                <mat-label for="email">Email cím: </mat-label>
+                <mat-label for="email">E-mail-cím: </mat-label>
                 <input matInput type="text" formControlName="email" required (input)="checkNameFields()"/>
             </mat-form-field>
-            <span class="error text-danger"  *ngIf="email?.invalid && email?.touched">Az email cím érvénytelen!</span>
+            <span class="error text-danger"  *ngIf="email?.invalid && email?.touched">Az e-mail-cím érvénytelen!</span>
             <mat-form-field>
                 <mat-icon matPrefix>vpn_key</mat-icon>
                 <mat-label for="password">Jelszó: </mat-label>
