--- a/src/app/pages/storage/storage.component.css
+++ b/src/app/pages/storage/storage.component.css
@@ -271,3 +271,50 @@ ul,li {
     transform: translateY(185px);
     opacity: 1;
 }
+
+.centered-content {
+    display: flex;
+    justify-content: center;
+    height: 100vh;
+}
+
+.image-container {
+    position: relative;
+    text-align: center;
+}
+
+.image-container img {
+    max-width: 100%;
+    height: auto;
+    display: block;
+}
+
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background: rgba(255, 255, 255, 0.7);
+}
+
+.no-costs-message {
+    font-size: 22px;
+    margin-bottom: 20px;
+    margin-top: 35px;
+    font-weight: bold;
+}
+
+.emptybutton {
+    font-size: 16px;
+    padding: 10px 20px;
+    border-radius: 6px;
+    background-color: #198754;
+    color: white;
+    border: none;
+    margin-bottom: 200px;
+}
