--- a/src/app/pages/bucket-list/bucket-list.component.html
+++ b/src/app/pages/bucket-list/bucket-list.component.html
@@ -1,1 +1,31 @@
-<p>bucket-list works!</p>
+<section class="vh-100">
+    <div class="container py-5 h-100">
+      <div class="row d-flex justify-content-center align-items-center h-100">
+        <div class="col col-xl-10">
+          <div class="card">
+            <div class="card-body p-5">
+              <h6 class="mb-3">Bakancslista</h6>
+              <form class="d-flex justify-content-center align-items-center mb-4">
+                <div class="form-outline flex-fill">
+                  <input type="text" id="form3" class="form-control form-control-lg" />
+                </div>
+                <button type="submit" class="btn btn-primary btn-lg ms-2">Hozzáadás</button>
+              </form>
+              <ul class="list-group mb-0" *ngFor="let listelement of bucketlist">
+                <li class="list-group-item d-flex justify-content-between align-items-center border-start-0 border-top-0 border-end-0 border-bottom rounded-0 mb-2">
+                  <div class="d-flex align-items-center">
+                    <input class="form-check-input me-2" type="checkbox" value="" aria-label="..." />
+                    {{ listelement.name }}
+                  </div>
+                  <a href="#!" data-mdb-toggle="tooltip" title="Remove item">
+                    <i class="fas fa-times text-primary"></i>
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  
