--- a/src/app/pages/bucket-list/bucket-list.component.css
+++ b/src/app/pages/bucket-list/bucket-list.component.css
@@ -1,52 +1,74 @@
-/* Add custom styles here */
-
 .vh-100 {
-    height: 100vh;
-    background-color: #e2d5de;
-  }
-  
-  .container {
-    padding: 5rem 0;
-  }
-  
-  .card {
-    border-radius: 15px;
-  }
-  
-  .card-body {
-    padding: 5rem;
-  }
-  
-  .form-outline {
-    flex: 1;
-  }
-  
-  .form-control-lg {
-    font-size: 1.25rem;
-  }
-  
-  .form-label {
-    font-size: 1rem;
-  }
-  
-  .btn-primary {
-    background-color: #007BFF;
-    color: #fff;
-  }
-  
-  .list-group-item {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    border: none;
-    margin-bottom: 0.5rem;
-    border-radius: 0;
-  }
-  
-  .form-check-input {
-    margin-right: 0.5rem;
-  }
-  
-  /* Add any other custom styles you need */
-  
-  
+  height: 100vh;
+  background-color: #e2d5de;
+}
+
+.container {
+  padding: 5rem 0;
+}
+
+.card {
+  border-radius: 15px;
+}
+
+.card-body {
+  padding: 5rem;
+}
+
+.form-outline {
+  flex: 1;
+}
+
+.form-control-lg {
+  font-size: 1.25rem;
+}
+
+.form-label {
+  font-size: 1rem;
+}
+
+.btn-primary {
+  background-color: #007BFF;
+  color: #fff;
+}
+
+.list-group-item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border: none;
+  margin-bottom: 0.5rem;
+  border-radius: 0;
+}
+
+.form-check-input {
+  margin-right: 0.5rem;
+}
+
+button {
+  background-color: #198754;
+  color: white;
+}
+
+input[type="checkbox"] {
+  transform: scale(1.4);
+  accent-color: #198754;
+  margin-right: 5px;
+}
+
+mat-icon {
+  cursor: pointer;
+}
+
+::ng-deep .mat-tooltip {
+  background-color: #198754;
+  font-size: 14px;
+  padding: 3px 12px;
+  border-radius: 3px;
+  cursor: pointer;
+}
+
+.crossed-out-text {
+  text-decoration: line-through;
+  color: gray;
+}
