--- a/src/app/pages/storage-missing-items/storage-missing-items.component.html
+++ b/src/app/pages/storage-missing-items/storage-missing-items.component.html
@@ -1,1 +1,39 @@
-<p>storage-missing-items works!</p>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="./storage-missing-items.component.css" rel="stylesheet">
+</head>
+
+<body>
+    <div class="container py-5">
+        <h1 class="text-center">Popular Dishes</h1>
+        <div class="row row-cols-1 row-cols-md-3 g-4 py-5">
+            <div class="col" *ngFor="let missingproduct of missingproducts">        
+                <div class="col">
+                    <div class="card">
+                        <img src="{{ missingproduct.image_url }}" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">{{ missingproduct.name }}</h5>
+                            <p class="card-text">{{ missingproduct.description }}</p>
+                        </div>
+                        <div class="mb-5 d-flex justify-content-around">
+                            <h3>{{ missingproduct.price }}</h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
+</body>
+
+</html>
