--- a/src/app/pages/storage-missing-items/storage-missing-items.component.css
+++ b/src/app/pages/storage-missing-items/storage-missing-items.component.css
@@ -1,31 +1,134 @@
-*{
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
-body{
-        background-color: #f9f6f2;
+
+.title-wrapper {
+    display: flex;
+    align-items: center;
 }
-.card-img-top{
+
+.line {
+    height: 1px;
+    background-color: black;
+    flex-grow: 1;
+}
+
+.card-img-top {
     border-radius: 50px;
     padding: 20px;
+    height: 374px;
+    object-fit: contain;
 }
-.card{
+
+.card {
     border-radius: 30px;
     box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 2px 0px;
+    border: 3px solid #198754;
 }
-.card-body{
+
+.card-body {
     padding: 25px;
     margin-top: -15px;
 }
-.btn-primary{
+
+.btn-primary {
     border-radius: 50px;
     width: 120px;
 }
-.btn-primary:hover{
+
+.btn-primary:hover {
     background-color: black;
     border: none;
 }
-h3,h5{
+
+h3,
+h5 {
     color: rgb(0, 91, 228);
+}
+
+@font-face {
+    font-family: 'SequentialistBB';
+    src: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/4273/306FA6_1_0.woff2') format('woff2'),
+        url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/4273/306FA6_0_0.woff') format('woff');
+    font-style: normal;
+    font-weight: 400;
+}
+
+@font-face {
+    font-family: 'SequentialistBB';
+    src: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/4273/306FA6_0_0.woff2') format('woff2'),
+        url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/4273/306FA6_0_0.woff') format('woff');
+    font-style: italic;
+    font-weight: 400;
+}
+
+* {
+    box-sizing: border-box;
+}
+
+section {
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    padding: 3rem;
+    max-height: 150px;
+    padding-top: 0px;
+}
+
+section:nth-of-type(1) {
+    background: white;
+}
+
+blockquote.bubble {
+    background-position: center;
+    background-repeat: no-repeat !important;
+    background-size: 100% 100%;
+    margin: 0 auto;
+    text-align: center;
+    height: 155px;
+    box-sizing: content-box;
+    line-height: 1;
+    width: 200px;
+}
+
+blockquote.speech {
+    background-image: url("../../../assets/bubble.png");
+    padding-top: 26%;
+    padding-left: 3%;
+    padding-bottom: 0px;
+    font-weight: bold;
+    font-size: 25px;
+}
+
+.row {
+    height: 200px;
+}
+
+h1 {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 225px;
+    text-align: center;
+    color: #198754;
+}
+
+.icon {
+    position: relative;
+    z-index: 2;
+}
+
+.rovidebb {
+    width: 600px;
+    padding-left: 150px;
+    padding-top: 5px;
+}
+
+.hosszabb {
+    width: 750px;
+    padding-left: 5px;
+    padding-top: 15px;
+    padding-bottom: 5px;
 }
