--- a/src/app/bs-navbar/bs-navbar.component.html
+++ b/src/app/bs-navbar/bs-navbar.component.html
@@ -1,45 +1,42 @@
-    <nav class="navbar navbar-expand-md navbar-dark bg-success sticky">
-        <a class="navbar-brand" routerLink="/">Családi kisokos</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-        </button>
-    
-        <div class="collapse navbar-collapse" id="navbarCollapse">
-            <ul class="navbar-nav ml-auto mb-2 mb-md-0">
-                <li class="nav-item">
-                    <a *ngIf="userUid" class="nav-link text-white" routerLink="/storage">Raktár</a>
-                </li>
-                <li class="nav-item">
-                    <a *ngIf="userUid" class="nav-link text-white" routerLink="/storage-missing-items">Ajánlott termékek</a>
-                </li>
-                <li class="nav-item">
-                    <a *ngIf="userUid" class="nav-link text-white" routerLink="/shopping-list">Bevásárlólista</a>
-                </li>
-                <li class="nav-item">
-                    <a *ngIf="userUid" class="nav-link text-white" routerLink="/bucket-list">Bakancslista</a>
-                </li> 
-                <li class="nav-item">
-                    <a *ngIf="userUid" class="nav-link text-white" routerLink="/budget">Kiadásfigyelő</a>
-                </li>    
-            </ul>
-            <ul class="navbar-nav ms-auto mb-2 mb-md-0">
-            <ng-template #anonymousUser>
-                <li class="nav-item ">
-                    <a class="nav-link text-white" routerLink="/login">Bejelentkezés</a>
-                </li>
-            </ng-template>
-            <li ngbDropdown *ngIf="authService.user$ | async as user; else anonymousUser" class="nav-item dropdown">
+<nav class="navbar navbar-expand-md navbar-dark bg-success sticky">
+    <a class="navbar-brand" routerLink="/">Családi kisokos</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarCollapse">
+        <ul class="navbar-nav ml-auto mb-2 mb-md-0">
+            <li class="nav-item">
+                <a *ngIf="isLoggedInAndEmailVerified" class="nav-link text-white" routerLink="/storage">Raktár</a>
+            </li>
+            <li class="nav-item">
+                <a *ngIf="userUid" class="nav-link text-white" routerLink="/storage-missing-items">Ajánlott termékek</a>
+            </li>
+            <li class="nav-item">
+                <a *ngIf="userUid" class="nav-link text-white" routerLink="/shopping-list">Bevásárlólista</a>
+            </li>
+            <li class="nav-item">
+                <a *ngIf="userUid" class="nav-link text-white" routerLink="/bucket-list">Bakancslista</a>
+            </li> 
+            <li class="nav-item">
+                <a *ngIf="userUid" class="nav-link text-white" routerLink="/budget">Kiadásfigyelő</a>
+            </li>  
+        </ul>
+        <ul class="navbar-nav ms-auto mb-2 mb-md-0">
+            <li ngbDropdown *ngIf="isLoggedInAndEmailVerified" class="nav-item dropdown">
                 <a ngbDropdownToggle *ngIf="loggedInUser && loggedInUser.length > 0" class="nav-link dropdown-toggle" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    {{ loggedInUser[0].name.firstname + ' ' +  loggedInUser[0].name.lastname}}
+                    {{ loggedInUser[0].name.lastname + ' ' +  loggedInUser[0].name.firstname}}
                 </a>                  
                 <div ngbDropdownMenu class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdown01">
                     <a class="dropdown-item" (click)="logout()">Kijelentkezés</a>
                 </div>
             </li>
+            <li class="nav-item" *ngIf="!isLoggedInAndEmailVerified">
+                <a class="nav-link text-white" routerLink="/login">Bejelentkezés</a>
+            </li>
             <li class="nav-item">
                 <a *ngIf="!userUid" class="nav-link text-white" routerLink="/signup">Regisztráció</a>
             </li>
         </ul>
-        </div>
-    </nav>
-  
+    </div>
+</nav>
