--- a/src/app/pages/storage-item/storage-item.component.css
+++ b/src/app/pages/storage-item/storage-item.component.css
@@ -26,6 +26,8 @@ p {
     margin-left: auto;
     margin-right: auto;
     width: 27%;
+    max-height: 290px;
+    object-fit: contain;
 }
 .mat-card {
     padding-bottom: 0px;
