--- a/src/app/pages/storage/storage.component.css
+++ b/src/app/pages/storage/storage.component.css
@@ -122,7 +122,6 @@ h3 {
     background-size: cover;
     background-repeat: no-repeat;
     overflow: hidden;
-
   }  
 
 .kepmid {
@@ -238,6 +237,10 @@ ul,li {
 .product-image-wrapper {
     position: relative;
     transition: transform 0.3s;
+    display: flex;
+    justify-content: center;
+    left: 60px;
+    max-width: -webkit-fill-available;
 }
 
 .product-image-wrapper:hover {
@@ -248,6 +251,8 @@ ul,li {
     display: block;
     object-fit: contain;
     position: relative;
+    min-width: 210px;
+    max-width: 210px;
 }
 
 .product-image-wrapper .icon-hidden {
